--- a/weapp-1/pages/user/index.wxml
+++ b/weapp-1/pages/user/index.wxml
@@ -12,8 +12,8 @@
      获得你的公开信息（昵称、头像等）
   </view>
   <view class="btn_btn">
-    <button>拒绝</button>
-    <button class="getUserInfo" open-type="getUserInfo">允许</button>
+    <button bindtap="logn">拒绝</button>
+    <button class="getUserInfo" open-type="getUserInfo" bindgetuserinfo="logn">允许</button>
   </view>
   
   
