--- a/weapp-1/pages/index/index.wxml
+++ b/weapp-1/pages/index/index.wxml
@@ -1,5 +1,6 @@
 <!--index.wxml-->
 <view class="container">
+    <!-- 顶部轮播图 -->
     <view class="swp">
         <view class="seek">
             <input class="seek_l fl" type="text" placeholder="探索你的奢物"   />
@@ -16,7 +17,7 @@
             </block>
         </swiper>
     </view>
-
+    <!-- 功能选择  -->
     <view class="xuanze">
         <view>
             <view class="xuanze_img">
@@ -61,6 +62,7 @@
         
     </view>
     
+    <!-- 商品分类  -->
     <view class="venues_box">
         <view class="venues_l">
            <view class='venues_content'>
@@ -124,6 +126,25 @@
 
     </view>
 
+    <!-- 品牌选择 scroll-x 广告 -->
+    <view class="section_box">
+        <scroll-view class="scroll_view" scroll-x style="width: 100%">
+            <view class="section_content">
+                <block wx:for="{{7}}" wx:key="i">
+                    <view  class="section_logo">
+                        <view  class="section_img">
+                            <image src="../../images/home/section_logo.png" />
+                        </view>
+                        <view  class="section_h1">
+                            品牌名称
+                        </view>
+                    </view>
+                </block>
+            </view>
+        </scroll-view>
+    </view>
+
+    <!-- banner 广告 -->
     <view class="banner">
         <block  wx:for="{{4}}" wx:key="i" >
         <view class="banner_info">
@@ -137,7 +158,7 @@
         </block>
     </view>
     
-
+    
     <loading hidden="{{loadingHidden}}">
         加载中...
     </loading>
