--- a/weapp-1/pages/index/activity/activity.wxss
+++ b/weapp-1/pages/index/activity/activity.wxss
@@ -1,3 +1,5 @@
+@import '/components/goodsList/list.wxss';
+
 .banner{
   width: 100%;
   height: 306rpx;
@@ -28,94 +30,3 @@
   color: rgba(173, 155, 106, 1);
 }
 
-.goods_box {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.goods {
-  margin-top: 20rpx;
-  width: 370rpx;
-  height: 47r4px;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding-bottom: 35rpx;
-  background: #fff;
-}
-
-.goods:nth-child(2n) {
-  margin-left: 12rpx;
-}
-
-.goods_img {
-  width: 100%;
-  height: 345rpx;
-  background: rgba(192, 180, 142, 1);
-}
-
-.goods_h1 {
-  display: flex;
-  align-items: center;
-  height: 71rpx;
-  padding: 0 22rpx;
-}
-
-.goods_h1>.money {
-  font-size: 34rpx;
-  font-family: PingFangSC-Medium;
-  color: rgba(153, 112, 72, 1);
-  line-height: 30rpx;
-  padding-right: 8rpx;
-}
-
-.money>text {
-  font-size: 26rpx;
-}
-
-.goods_h1>.zk {
-  font-size: 20rpx;
-  font-family: PingFang-SC-Medium;
-  color: rgba(153, 153, 153, 1);
-  line-height: 30rpx;
-}
-
-.goods_h1>.jj {
-  background: rgba(236, 182, 88, 1);
-  border-radius: 5px;
-  padding: 4rpx 6rpx;
-  font-size: 20rpx;
-  font-family: PingFang-SC-Medium;
-  color: rgba(255, 255, 255, 1);
-  line-height: 30rpx;
-  height: 30rpx;
-  margin-left: 27rpx;
-}
-
-.goods_h1>.fq {
-  font-size: 20rpx;
-  font-family: PingFang-SC-Medium;
-  color: rgba(224, 105, 43, 1);
-  line-height: 30prx;
-  padding: 5rpx 15rpx;
-  height: 30rpx;
-  border: 1px solid rgba(224, 105, 43, 1);
-  border-radius: 5px;
-  margin-left: 20rpx;
-}
-
-.goods_zk {
-  font-size: 24rpx;
-  font-family: PingFang-SC-Medium;
-  color: rgba(51, 51, 51, 1);
-  text-align: center;
-  line-height: 30rpx;
-  padding: 0 22rpx;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
