--- a/weapp-1/pages/index/activity/activity.wxml
+++ b/weapp-1/pages/index/activity/activity.wxml
@@ -1,3 +1,4 @@
+<import  src="/components/goodsList/list.wxml" />
 <view class="banner">
   <image src="/images/activity_banner.png" />
 </view>
@@ -18,22 +19,5 @@
       筛选
     </view>
   </view>
-  <view class="goods_box">
-    <view class="goods" wx:for="{{10}}" wx:key="i">
-      <view class="goods_img">
-
-      </view>
-      <view class="goods_h1">
-        <text class="money"><text>￥</text>9800</text>
-        <text class="zk">¥9900</text>
-        <text class="jj">降</text>
-        <text class="fq">分期</text>
-
-      </view>
-      <view class="goods_zk">
-        [
-        <text>95新</text>]名称asdfdsfsdfds商品名称商品名称称
-      </view>
-    </view>
-  </view>
+  <template is="goodsList"></template>
 </view>
