--- a/weapp-1/pages/shop/goods/goods.wxss
+++ b/weapp-1/pages/shop/goods/goods.wxss
@@ -1,1 +1,246 @@
-/* pages/shop/goods/goods.wxss */
+@import '/components/goodsList/list.wxss';
+
+.swiper_box {
+  width: 100%;
+  height: 622rpx;
+}
+
+swiper-item image {
+  display: inline-block;
+  overflow: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+  color: transparent;
+}
+
+.swp {
+  position: relative;
+}
+
+.page {
+  position: absolute;
+  right: 30rpx;
+  bottom: 30rpx;
+  width: 80rpx;
+  height: 44rpx;
+  background: rgba(0, 0, 0, 1);
+  opacity: 0.3;
+  border-radius: 22px;
+  font-size: 20rpx;
+  font-family: PingFang-SC-Medium;
+  color: rgba(255, 255, 255, 1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.title {
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-bottom: 35rpx;
+  background: #fff;
+  padding-top: 38rpx;
+  padding-bottom: 47rpx;
+}
+
+.title_h1 {
+  display: flex;
+  align-items: center;
+  height: 71rpx;
+  padding: 0 22rpx;
+}
+
+.title_h1>.money {
+  font-size: 56rpx;
+  font-family: PingFangSC-Semibold;
+  color: rgba(51, 51, 51, 1);
+  font-weight: 600;
+  
+}
+
+.money>text {
+  font-size: 40rpx;
+  font-family: PingFangSC-Semibold;
+  color: rgba(51, 51, 51, 1);
+}
+
+.title_h1>.zk {
+  font-size: 28rpx;
+  font-family: PingFang-SC-Medium;
+  color: rgba(153, 153, 153, 1);
+  line-height: 30px;
+  margin-left: 14rpx;
+  text-decoration: line-through;
+}
+
+.title_h1>.jj {
+  background: rgba(236, 182, 88, 1);
+  border-radius: 5px;
+  padding: 4rpx 12rpx;
+  font-size: 20rpx;
+  font-family: PingFang-SC-Medium;
+  color: rgba(255, 255, 255, 1);
+  line-height: 30rpx;
+  height: 30rpx;
+  margin-left: 27rpx;
+}
+
+.title_h1>.fq {
+  font-size: 20rpx;
+  font-family: PingFang-SC-Medium;
+  color: rgba(224, 105, 43, 1);
+  line-height: 30prx;
+  padding: 5rpx 15rpx;
+  height: 30rpx;
+  border: 1px solid rgba(224, 105, 43, 1);
+  border-radius: 5px;
+  margin-left: 20rpx;
+}
+
+.title_info {
+  margin-top: 47rpx;
+  padding: 0 22rpx;
+  overflow: hidden;
+  font-weight: 600;
+  font-size:34rpx;
+  font-family:PingFangSC-Semibold;
+  color:rgba(51, 51, 51, 1);
+  line-height:50rpx;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
+.title_info>text{
+  font-weight: 600;
+  font-size:34rpx;
+  font-family:PingFangSC-Semibold;
+  color:rgba(153, 112, 72, 1);
+  line-height:50rpx;
+}
+
+.set_page {
+  margin-top: 20rpx;
+  display: flex;
+  /* align-items: center; */
+  flex-direction: column;
+  /* justify-content: center; */
+  background: #fff;
+
+}
+.page_h1{
+  text-align: center;
+  font-size:30rpx;
+  font-family:PingFang-SC-Bold;
+  color:#333;
+  line-height:88rpx;
+  font-weight: 600;
+  background: #fff;
+}
+.page_info{
+  display: flex;
+  padding-left: 31rpx;
+  align-items: center;
+  border-top: 1px solid #f2f2f2;
+  line-height: 80rpx;
+}
+.info_name{
+  width: 194rpx;
+  font-size:28rpx;
+  font-family:PingFang-SC-Regular;
+  color:rgba(102, 102, 102, 1);
+
+}
+.info_v {
+  flex: 1;
+  font-size:28rpx;
+  font-family:PingFang-SC-Medium;
+  color:rgba(51, 51, 51, 1);
+}
+
+.serve_box{
+  margin-top: 20rpx;
+  background: #fff;
+  padding-bottom: 27rpx;
+}
+.serve_info{
+  display: flex;
+  justify-content: space-around;
+
+}
+.serve_cnt{
+  flex: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.serve_img{
+  width: 150rpx;
+  height: 150rpx;
+}
+.serve_txt{
+  font-size:28rpx;
+  font-family:PingFang-SC-Medium;
+  color:rgba(51, 51, 51, 1);
+  line-height:50rpx;
+}
+
+.rich_text {
+  margin-top: 20rpx;
+  background: #fff;
+  padding-bottom: 30rpx;
+}
+
+.rich_tit {
+  display: flex;
+  width: 100%;
+  height: 88rpx;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 2px solid rgba(236, 238, 238, 1);
+}
+
+.rich_info {
+  font-size: 36rpx;
+  color: rgba(51, 51, 51, 1);
+  line-height: 44rpx;
+  position: relative;
+}
+
+.rich_br::after {
+  position: absolute;
+  content: '';
+  width: 40rpx;
+  height: 4rpx;
+  background: rgba(173, 155, 106, 1);
+  bottom: -16rpx;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.rich_cnt{
+  padding: 30rpx;
+}
+.rich_btn{
+  padding: 0 30rpx;
+}
+.r_btn {
+  border: none;
+  background:rgba(244, 214, 154, 1);
+  border-radius:8px;
+  font-size:34rpx;
+  font-family:PingFang-SC-Bold;
+  color:rgba(255, 255, 255, 1);
+  height: 80rpx;
+  height: 80rpx;
+}
+.r_btn:hover {
+  color:rgba(255, 255, 255, 1);
+  background:rgba(244, 214, 154, 1);
+}
