--- a/weapp-1/pages/shop/goods/goods.wxml
+++ b/weapp-1/pages/shop/goods/goods.wxml
@@ -56,10 +56,10 @@
 <view class="rich_text">
   <view class="rich_tit">
     <view class="rich_info {{is_show==0?'rich_br':''}}" style="text-align:right;margin-right:50rpx" data-show='0' bindtap="show">
-      品牌
+      商品详情
     </view>
     <view class="rich_info {{is_show==1?'rich_br':''}}" style="margin-left:50rpx" data-show='1' bindtap="show">
-      款式
+      购买流程
     </view>
   </view>
   <view wx:if="{{is_show==0}}" class="rich_cnt">
@@ -77,3 +77,33 @@
   — 猜你喜欢 —
 </view>
 <template is="goodsList" />
+
+<view class="cart">
+  <view class="service">
+    <view class="service_logo">
+    <image src="/images/kefu.png" />
+    </view>
+    <view class="service_txt">
+    客服
+    </view>
+  </view>
+  <view class="car">
+    <view class="car_logo">
+<image src="/images/gouwuche.png" />
+    </view>
+    <view class="car_txt">
+  购物车
+    </view>
+  </view>
+  <view class="affair">
+    <view class="add_cart">
+      加入购物车
+    </view>
+    <view class="jiange">
+      
+    </view>
+    <view class="buy">
+      立即购买
+    </view>
+  </view>
+</view>
