--- a/weapp-1/pages/shop/goods/goods.wxml
+++ b/weapp-1/pages/shop/goods/goods.wxml
@@ -1,5 +1,5 @@
 <import src="/components/goodsList/list.wxml" />
-
+<import src="/components/cart/cart.wxml" />
 <view class="swp">
   <swiper class="swiper_box" duration="{{1000}}" bindchange="current">
     <block wx:for="{{imgs}}" wx:key="i">
@@ -77,33 +77,5 @@
   — 猜你喜欢 —
 </view>
 <template is="goodsList" />
+<template is="cart" />
 
-<view class="cart">
-  <view class="service">
-    <view class="service_logo">
-    <image src="/images/kefu.png" />
-    </view>
-    <view class="service_txt">
-    客服
-    </view>
-  </view>
-  <view class="car">
-    <view class="car_logo">
-<image src="/images/gouwuche.png" />
-    </view>
-    <view class="car_txt">
-  购物车
-    </view>
-  </view>
-  <view class="affair">
-    <view class="add_cart">
-      加入购物车
-    </view>
-    <view class="jiange">
-      
-    </view>
-    <view class="buy">
-      立即购买
-    </view>
-  </view>
-</view>
