--- a/weapp-1/pages/shop/goods/goods.wxss
+++ b/weapp-1/pages/shop/goods/goods.wxss
@@ -1,4 +1,5 @@
 @import '/components/goodsList/list.wxss';
+@import '/components/cart/cart.wxss';
 page {
   padding-bottom: 120rpx;
 }
@@ -261,52 +262,4 @@ swiper-item image {
 .r_btn:hover {
   color: rgba(255, 255, 255, 1);
   background: rgba(244, 214, 154, 1);
-}
-
-.cart {
-  width: 100%;
-  height: 100rpx;
-  padding-right: 43rpx;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  display: flex;
-  align-items: center;
-  background: #fff;
-}
-
-.service,
-.car {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 0 43rpx;
-}
-
-.service_logo,
-.car_logo {
-  width: 40rpx;
-  height: 40rpx;
-  margin-bottom: 10rpx;
-}
-
-.affair{
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 430rpx;
-  background:rgba(194, 179, 135, 1);
-  border-radius:35px;
-  line-height: 70rpx;
-  font-size:32rpx;
-  font-family:PingFang-SC-Bold;
-  color:rgba(255, 255, 255, 1);
-  font-weight: 600;
-  line-height: 70rpx;
-}
-.jiange{
-  width: 2rpx;
-  height: 30rpx;
-  background: #fff;
 }
