--- a/weapp-1/pages/shop/order/order.wxml
+++ b/weapp-1/pages/shop/order/order.wxml
@@ -73,7 +73,7 @@
 
 <view class="submit">
   <text>￥1299.00</text>
-  <view class="submit_btn">
+  <view class="submit_btn jinse">
     提交订单
   </view>
 </view>
