--- a/weapp-1/app.wxss
+++ b/weapp-1/app.wxss
@@ -38,3 +38,9 @@ image {
 .jinse {
    background: linear-gradient(to right, RGBA(227, 211, 175, 1), RGBA(194, 179, 135, 1));
 }
+.icon{
+    width: 20px;
+    height: 20px;
+    border: 1px solid #F2f2f2;
+    border-radius: 50%;
+}
