--- a/weapp-1/app.wxss
+++ b/weapp-1/app.wxss
@@ -41,6 +41,6 @@ image {
 .icon{
     width: 20px;
     height: 20px;
-    border: 1px solid #F2f2f2;
+    border: 1px solid RGBA(194, 179, 135, 1);
     border-radius: 50%;
 }
