--- a/weapp-1/pages/shop/pay/pay.wxss
+++ b/weapp-1/pages/shop/pay/pay.wxss
@@ -15,7 +15,7 @@ page{
   justify-content: space-between;
   
 }
-.pay_num text{
+.pay_num text:nth-of-type(1){
   font-size:36rpx;
   font-family:PingFang-SC-Medium;
   color:rgba(102, 102, 102, 1);
@@ -59,4 +59,46 @@ page{
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.fq{
+  position: relative;
+}
+.jt{
+  position: absolute;
+  height: 26rpx;
+  width: 15rpx;
+  top: 50%;
+  right: 40rpx;
+  transform: translateY(-50%);
+  transform: rotate(90deg)
+}
+.fq_box{
+  height: 124rpx;
+  box-sizing: border-box;
+  border-bottom: 1px solid #f2f2f2;
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+  flex-direction: column;
+  padding-left: 169rpx;
+  position: relative;
+}
+.fq_box>text:nth-of-type(1){
+  font-size:34rpx;
+  font-family:PingFang-SC-Medium;
+  color:#333;
+  line-height:34rpx;
+}
+.fq_box>text:nth-of-type(2){
+  margin-top: 20rpx;
+  font-size:26rpx;
+  font-family:PingFang-SC-Medium;
+  color:#999;
+  line-height:26rpx;
+}
+.fq_box>.icon{
+  position: absolute;
+  top: 50%;
+  right: 30rpx;
+  transform:translateY(-50%);
 }
