支付页面未设置支付密码弹框

--- a/weapp-1/pages/shop/pay/pay.wxml
+++ b/weapp-1/pages/shop/pay/pay.wxml
@@ -45,3 +45,15 @@
   </view>
 
 </view>
+
+<view class="show_modal">
+  <view class="modal">
+    <view class="modal_info">
+      暂未设置支付密码，请先设置支付密码
+    </view>
+    <view class="modal_btn">
+      <text>暂不设置</text>
+      <text>立即设置</text>
+    </view>
+  </view>
+</view>
