--- a/weapp-1/pages/shop/pay/pay.wxss
+++ b/weapp-1/pages/shop/pay/pay.wxss
@@ -13,7 +13,7 @@ page{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  
+  background: #fff;
 }
 .pay_num text:nth-of-type(1){
   font-size:36rpx;
@@ -115,6 +115,7 @@ background:rgba(0,0,0,.4);
   top: 40%;
   left: 50%;
   transform: translate(-50%,-50%);
+  background: #fff;
 }
 .modal_info{
   height: 202rpx;
