--- a/weapp-1/pages/cart/index.wxml
+++ b/weapp-1/pages/cart/index.wxml
@@ -1,4 +1,19 @@
-<view class="container">
-  <image src="{{cartImg}}" class="cart-image"/>
-  <view>{{tipWords}}</view>
+<view class="no_goods">
+  <image src="/images/cart-null.png" class="cart-image"/>
+  <view>购物车空空如也</view>
+</view>
+<view class="goods_list t20">
+  <view class="goods" wx:for="{{1}}" wx:key="i">
+  <view class="icon">
+    <icon  type="success" size="20" color="RGBA(194, 179, 135, 1)" />
+  </view>
+    <view class="goods_logo">
+      <image src="/images/goods_logo.png" />
+    </view>
+    <view class="goods_info">
+      <text class="info_txt">澳洲Restoria discreet丽丝丽丝丽雅黑发还原乳250ml</text>
+      <text class="money">￥ 1288.00</text>
+      <text class="curt">X{{1}}</text>
+    </view>
+  </view>
 </view>
