--- a/weapp-1/pages/cart/index.wxss
+++ b/weapp-1/pages/cart/index.wxss
@@ -1,12 +1,73 @@
-.container {
+.no_goods {
   display: flex;
-  height: 100%;
   align-items: center;/*垂直居中*/
   justify-content: center;/*水平居中*/
   background-color: #F2f2f2;
   color: #939393;
 }
-.container .cart-image {
-  width: 120px;
-  height: 120px;
+.no_goods .cart-image {
+  width: 240rpx;
+  height: 240rpx;
+}
+
+
+.goods_list {
+  box-sizing: border-box;
+  padding-left: 22rpx;
+  padding-right: 30rpx;
+}
+
+.goods {
+  width: 100%;
+  height: 284rpx;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  padding: 42rpx 0;
+  border-bottom: 1px solid #f2f2f2;
+}
+
+.goods_logo {
+  margin-left: 40rpx;
+  width: 198rpx;
+  height: 198rpx;
+}
+
+.goods_info {
+  width: 445rpx;
+  font-size: 28rpx;
+  font-family: PingFang-SC-Medium;
+  color: rgba(51, 51, 51, 1);
+  line-height: 45rpx;
+  position: relative;
+  margin-left: 33rpx;
+  height: 100%;
+}
+
+.info_txt {
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+}
+
+.goods_info .money {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  font-size:48rpx;
+  font-family:PingFang-SC-Bold;
+  color:rgba(255,114,114,1);
+}
+
+.curt {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  font-size: 26rpx;
+  font-family: Helvetica;
+  color: rgba(51, 51, 51, 1);
 }
