--- a/weapp-1/pages/my/wallet/take/take.wxss
+++ b/weapp-1/pages/my/wallet/take/take.wxss
@@ -1,1 +1,63 @@
-/* pages/my/wallet/take/take.wxss */
+page {
+  background: #fff;
+}
+
+view {
+  box-sizing: border-box;
+}
+
+.add {
+  height: 142rpx;
+  font-size: 36rpx;
+  font-family: PingFang-SC-Medium;
+  color: rgba(25, 138, 243, 1);
+  line-height: 40rpx;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #f2f2f2;
+  padding: 0 30rpx;
+}
+
+.number {
+  padding: 38rpx 30rpx;
+  border-bottom: 1px solid #f2f2f2;
+}
+
+.number>text {
+  font-size: 30rpx;
+  font-family: PingFang-SC-Medium;
+  color: rgba(51, 51, 51, 1);
+  line-height: 40rpx;
+}
+
+.number>input {
+  margin-top: 70rpx;
+  font-size: 30rpx;
+  font-family: PingFang-SC-Medium;
+  line-height: 40rpx;
+}
+
+.take_btn {
+  width: 690rpx;
+  height: 80rpx;
+  margin: 0 auto;
+  margin-top: 111rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 40rpx;
+  font-size: 34rpx;
+  font-family: PingFang-SC-Bold;
+  color: rgba(255, 255, 255, 1);
+  line-height: 49rpx;
+}
+
+.ts {
+  margin-top: 20rpx;
+  font-size: 24epx;
+  font-family: PingFang-SC-Medium;
+  color: rgba(153, 153, 153, 1);
+  line-height: 40rpx;
+  text-align: right;
+  padding-right: 1em;
+}
