--- a/weapp-1/pages/my/wallet/take/take.wxss
+++ b/weapp-1/pages/my/wallet/take/take.wxss
@@ -30,13 +30,17 @@ view {
   line-height: 40rpx;
 }
 
-.number>input {
-  margin-top: 70rpx;
-  font-size: 30rpx;
+.input {
+  margin-top: 40rpx;
+  font-size: 72rpx;
   font-family: PingFang-SC-Medium;
   line-height: 40rpx;
+  color: #333;
 }
-
+input{
+  width: 100%;
+  height: 100%;
+}
 .take_btn {
   width: 690rpx;
   height: 80rpx;
@@ -60,4 +64,12 @@ view {
   line-height: 40rpx;
   text-align: right;
   padding-right: 1em;
+}
+.keyong{
+  margin-top: 15rpx;
+  padding-left: 1em;
+  font-size:24rpx;
+  font-family:PingFang-SC-Medium;
+  color:rgba(153,153,153,1);
+  line-height:40rpx;
 }
