--- a/weapp-1/pages/my/wallet/Recharge/Recharge.wxss
+++ b/weapp-1/pages/my/wallet/Recharge/Recharge.wxss
@@ -1,8 +1,10 @@
+page{
+  height: 100%;
+  display:flex;
+  flex-direction: column;
+}
 view{
   box-sizing: border-box;
-}
-.sum_box{
-  
 }
 .sum{
   display: flex;
@@ -41,7 +43,9 @@ view{
   width: 40rpx;
   height: 40rpx;
 }
-
+.pay_body{
+  flex:1;
+}
 .pay_num {
   height: 140rpx;
   padding: 0 30rpx;
