--- a/weapp-1/pages/my/wallet/take/take.wxss
+++ b/weapp-1/pages/my/wallet/take/take.wxss
@@ -73,3 +73,36 @@ input{
   color:rgba(153,153,153,1);
   line-height:40rpx;
 }
+
+.yhk{
+  padding: 0 30rpx;
+  height: 142rpx;
+  border-bottom:1px solid #f2f2f2;
+  display: flex;
+  align-items: center;
+}
+.logo_img{
+  width: 90rpx;
+  height: 90rpx;
+  display: flex;
+  align-items: center; 
+  
+}
+.logo_img>image{
+  margin: 0 auto;
+}
+.yhk_info{
+  margin-left: 20rpx;
+  display:flex;
+  align-items:initial;
+  flex-direction: column;
+}
+.yhk_info>text{
+  font-size:30rpx;
+  font-family:PingFang-SC-Medium;
+  color:rgba(51, 51, 51, 1);
+  line-height:40rpx;
+}
+.yhk_info>text:nth-of-type(2){
+  font-size:24rpx;
+}
