--- a/weapp-1/pages/my/hongb/hongb.wxss
+++ b/weapp-1/pages/my/hongb/hongb.wxss
@@ -17,6 +17,19 @@ view {
   font-size: 28rpx;
   font-family: PingFang-SC-Medium;
   color: rgba(153, 153, 153, 1);
+  position: relative;
+}
+
+.nav_tab .action::after {
+  position: absolute;
+  content: '';
+  width: 40rpx;
+  height: 4rpx;
+  background: rgba(173, 155, 106, 1);
+  border-radius: 2px;
+  left: 50%;
+  bottom: 2px;
+  transform: translateX(-50%);
 }
 
 .nav_tab>view.action {
@@ -29,56 +42,27 @@ view {
   width: 690rpx;
   height: 185rpx;
   display: flex;
+  align-items: center;
   position: relative;
-}
-
-.card::before {
-  position: absolute;
-  content: '';
-  width: 40rpx;
-  height: 40rpx;
-  background-color: #f2f2f2;
-  border-radius: 50%;
-  left: 0;
-  top: 50%;
-  transform: translate(-60%, -50%);
-}
-
-.card::after {
-  position: absolute;
-  content: '';
-  width: 40rpx;
-  height: 40rpx;
-  background-color: #f2f2f2;
-  border-radius: 50%;
-  right: 0;
-  top: 50%;
-  transform: translate(40%, -50%);
+  background: #fff;
+  padding-left: 30rpx;
+  padding-right: 50rpx;
+  border-radius:20px;
 }
 
 .card_l {
-  width: 78rpx;
-  height: 100%;
-  background: rgba(218, 179, 95, 1);
-  font-size: 30rpx;
-  font-family: PingFang-SC-Medium;
-  color: rgba(255, 255, 255, 1);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  writing-mode: vertical-rl;
-  border-radius: 10px;
+  width: 82rpx;
+  height: 88rpx;
 }
 
 .card_r {
-  background: #fff;
   height: 100%;
   flex: 1;
   display: flex;
   align-items: center;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
+  justify-content: space-between;
   position: relative;
+  margin-left: 55rpx;
 }
 
 .card_r>view {
@@ -87,103 +71,46 @@ view {
   justify-content: center;
   flex-direction: column;
 }
-
-.card_num {
-  margin-left: 30rpx;
+.card_info{
+  flex: 1;
 }
-
-.card_num>view:nth-of-type(1) {
-  font-size: 70rpx;
-  font-family: PingFangSC-Semibold;
-  color: rgba(218, 179, 95, 1);
-  /* line-height:121rpx; */
-}
-
-.card_num>view>text {
-  font-size: 36rpx;
-  font-family: PingFang-SC-Medium;
-  color: rgba(218, 179, 95, 1);
-}
-
-.card_num>view:nth-of-type(2) {
-  font-size: 24rpx;
-  font-family: PingFangSC-Regular;
-  color: rgba(232, 194, 112, 1);
-}
-
-.card_info {
-  margin-left: 67rpx;
-}
-
 .card_info>view:nth-of-type(1) {
   font-size: 26rpx;
   font-family: PingFangSC-Regular;
-  color: rgba(102, 102, 102, 1);
+  color: rgba(51, 51, 51, 1);
   line-height: 40rpx;
 }
 
 .card_info>view:nth-of-type(2) {
   font-size: 24rpx;
   font-family: PingFangSC-Regular;
+  color: rgba(102, 102, 102, 1);
+  line-height: 40rpx;
+}
+
+.card_info>view:nth-of-type(3) {
+  font-size: 24rpx;
+  font-family: PingFangSC-Regular;
   color: rgba(153, 153, 153, 1);
   line-height: 40rpx;
 }
 
-.card_btn {
-  margin-top: 20rpx;
-  width: 190rpx;
-  height: 50rpx;
-  background: rgba(218, 179, 95, 1);
-  border-radius: 25px;
-  font-size: 24rpx;
-  font-family: PingFangSC-Regular;
-  color: rgba(255, 255, 255, 1);
-  line-height: 40rpx;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.card_num{
+  font-size:56rpx;
+  font-family:PingFangSC-Semibold;
+  color:rgba(255,126,87,1);
 }
 
-.yiyong .card_l,
-.guoqi .card_l {
-  background: rgba(205, 205, 205, 1);
+.card.yiyong .card_num{
+  color:rgba(205,205,205,1);
 }
-
-.yiyong .card_num>view,
-.guoqi .card_num>view {
-  color: rgba(205, 205, 205, 1);
+.card.guoqi .card_num{
+  color:rgba(205,205,205,1);
 }
-
-.yiyong .card_num>view>text,
-.guoqi .card_num>view>text {
-  color: rgba(205, 205, 205, 1);
-}
-
-.yiyong .card_btn,
-.guoqi .card_btn {
-  background: rgba(205, 205, 205, 1);
-}
-
-.yiyong .card_info>view,
-.guoqi .card_info>view {
-  color: rgba(205, 205, 205, 1);
-}
-
-.yiyong .card_info>.card_btn,
-.guoqi .card_info>.card_btn {
-  color: #fff;
-}
-
-.gq_logo {
-  width: 183rpx;
-  height: 146rpx;
+.logo{
+  width: 122rpx;
+  height: 104rpx;
   position: absolute;
-  top: 22rpx;
-  right: 15rpx;
-  overflow: hidden;
-  opacity: 0;
-}
-
-.guoqi .gq_logo {
-  opacity: 1;
+  top: 14rpx;
+  right: 142rpx;
 }
