--- a/weapp-1/pages/my/card/card.wxss
+++ b/weapp-1/pages/my/card/card.wxss
@@ -21,10 +21,22 @@ view {
   font-size: 28rpx;
   font-family: PingFang-SC-Medium;
   color: rgba(153, 153, 153, 1);
+  position: relative;
 }
 
 .nav_tab>view.action {
   color: rgba(173, 155, 106, 1);
+}
+.nav_tab .action::after{
+  position: absolute;
+  content: '';
+  width: 40rpx;
+  height: 4rpx;
+  background:rgba(173,155,106,1);
+  border-radius:2px;
+  left: 50%;
+  bottom: 2px;
+  transform: translateX(-50%);
 }
 
 .card {
@@ -46,6 +58,7 @@ view {
   left: 0;
   top: 50%;
   transform: translate(-60%,-50%);
+  z-index: 9;
 }
 .card::after {
   position: absolute;
@@ -56,7 +69,8 @@ view {
   border-radius: 50%;
   right: 0;
   top: 50%;
-  transform: translate(40%,-50%);
+  transform: translate(50%,-50%);
+  z-index: 9;
 }
 
 .card_l {
@@ -187,4 +201,25 @@ view {
 
 .guoqi .gq_logo{
   opacity: 1;
+}
+
+.get_card .card_l{
+  width: 138rpx;
+}
+
+.get_card .card_r{
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.get_card .xian{
+  height: 73rpx;
+  width: 1px;
+  background:rgba(218,179,95,1);
+  margin-left: 30rpx;
+}
+.get_card .card_info{
+  margin-left: 25rpx;
 }
