--- a/weapp-1/pages/my/hongb/hongb.wxml
+++ b/weapp-1/pages/my/hongb/hongb.wxml
@@ -11,30 +11,23 @@
 </view>
 
 <view class="card_box weiyong">
-  <view class="card {{showCard==1?'yiyong':''}} {{showCard==2?'guoqi':''}}" wx:for="{{5}}" wx:key="i">
+  <view class="card {{showCard==1?'yiyong':''}} {{showCard==2?'guoqi':''}}" wx:for="{{3}}" wx:key="i">
     <view class="card_l">
-      优惠券
+      <image wx:if="{{showCard==0}}" src="/images/my/hb_wsy.png" />
+      <image wx:else src="/images/my/hb_ysy.png" />
     </view>
     <view class="card_r">
-      <view class="card_num">
-        <view><text>¥</text> 5{{showCard}}0</view>
-        <view>满8888可使用</view>
-      </view>
       <view class="card_info">
-        <view>适用于浪琴-名匠手表</view>
-        <view>2018.05.12-2018.6.12</view>
-        <view wx:if="{{showCard==0}}" class="card_btn">
-          去使用
-        </view>
-        <view wx:if="{{showCard==1}}" class="card_btn">
-          已使用
-        </view>
-        <view wx:if="{{showCard==2}}" class="card_btn">
-          已过期
-        </view>
+        <view>奢物消费红包</view>
+        <view>获取方式：签到活动</view>
+        <view>过期时间：2018-08-08</view>
       </view>
-      <view class="gq_logo">
-        <image src="/images/my/guoqi.png" />
+      <view class="card_num">
+        2{{showCard}}元
+      </view>
+      <view class="logo">
+        <image wx:if="{{showCard==1}}" src="/images/my/hb_ysy_logo.png" />
+        <image wx:if="{{showCard==2}}" src="/images/my/hb_ygq_logo.png" />
       </view>
     </view>
   </view>
