--- a/weapp-1/pages/shop/order/order.wxss
+++ b/weapp-1/pages/shop/order/order.wxss
@@ -143,7 +143,9 @@ view{
 .isnum{
   color:rgba(133, 84, 36, 1);
 }
-
+.money text{
+  color: #333;
+}
 .submit{
   position: fixed;
   bottom: 0;
@@ -171,6 +173,7 @@ view{
 }
 
 .lxkf{
+  padding: 0;
   margin-top: 44rpx;
   width: 240rpx;
   height: 60rpx;
@@ -179,4 +182,5 @@ view{
   font-family:PingFang-SC-Medium;
   color:rgba(102,102,102,1);
   line-height:40px;
+  border:1px solid #f2f2f2;
 }
