--- a/weapp-1/pages/shop/order/order.wxml
+++ b/weapp-1/pages/shop/order/order.wxml
@@ -41,17 +41,31 @@
     <text>应付</text>
     <text class="mn_num" >￥1299.00</text>
   </view>
-  <view class="lxkf">
+  <view class="kefu_box">
+      <view class="lxkf">
     <view class="kf_img">
-      
+      <image src="/images/kefu.png" />
     </view>
     <text>联系客服</text>
   </view>
+  </view>
 </view>
 
-
-<view class="submit">
-  <view class="submit_btn jinse">
+<view class="order_info">
+  <view>
+  <view>订单编号：2017880029001</view>
+  <view class="copy">复制</view>
+</view>
+<view>
+  <view>下单时间：2017.08.09 12:09:03</view>
+</view>
+<view>
+  <view>订单状态：<text style="color:red">待付款</text> </view>
+  <view>取消订单</view>
+</view>
+<view class="submit_btn jinse">
     立即支付
   </view>
 </view>
+
+  
