--- a/weapp-1/pages/shop/order/order.wxss
+++ b/weapp-1/pages/shop/order/order.wxss
@@ -1,6 +1,3 @@
-page{
-  padding-bottom: 120rpx;
-}
 view{
   box-sizing: border-box;
 }
@@ -146,41 +143,64 @@ view{
 .money text{
   color: #333;
 }
-.submit{
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background: #fff;
-  height: 100rpx;
-  padding: 0 30rpx;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 
-}
 
-.submit_btn{
-  flex: 1;
+.order_info  .submit_btn{
+  margin-top: 44rpx;
   height: 70rpx;
   border-radius:35px;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   font-size:32rpx;
   font-family:PingFang-SC-Bold;
   color:rgba(255, 255, 255, 1);
 }
-
-.lxkf{
-  padding: 0;
-  margin-top: 44rpx;
+.money .kefu_box{
+  justify-content: center;
+  padding-bottom: 50rpx;
+  padding-top: 44rpx;
+  height: auto;
+}
+.money .lxkf{
   width: 240rpx;
   height: 60rpx;
   border-radius:10px;
+  border:1px solid #f2f2f2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.money .lxkf .kf_img{
+  width: 26rpx;
+  height: 25rpx;
+}
+.lxkf text{
+  margin-left: 10rpx;
   font-size:26rpx;
   font-family:PingFang-SC-Medium;
   color:rgba(102,102,102,1);
-  line-height:40px;
-  border:1px solid #f2f2f2;
+  line-height:40rpx;
+}
+
+.order_info{
+  padding: 0 30rpx;
+  height: 310rpx;
+  background-color: #fff;
+  display: flex;
+  align-content:center;
+  justify-content: center;
+  flex-direction: column;
+}
+.order_info >view {
+  display: flex;
+  align-content:center;
+  justify-content: space-between;
+  margin-top: 10rpx;
+}
+
+.copy{
+  border: 1px solid #ccc;
+  border-radius:2px;
+  padding: 5rpx 15rpx;
 }
