--- a/weapp-1/pages/shop/order/order.wxss
+++ b/weapp-1/pages/shop/order/order.wxss
@@ -59,6 +59,43 @@ view{
   overflow: hidden;
 }
 
+.kd{
+  background-color: #fff;
+  padding: 0 30rpx;
+  height: 227rpx;
+  padding-top: 65rpx;
+  display: flex;
+  
+
+}
+.kd_l{
+  width: 67rpx;
+  height: 53rpx;
+  margin-top: 30rpx;
+}
+.kd_r{
+  flex: 1;
+  margin-left: 36rpx;
+}
+.kd_tel{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  
+}
+.kd_r view,.kd_r text{
+  font-size:30rpx;
+  font-family:PingFang-SC-Medium;
+  color:rgba(51,51,51,1);
+  line-height:40rpx;
+}
+
+.kd_tel>view:nth-of-type(2){
+  color:rgba(107,159,255,1);
+}
+.kd_r>view:nth-of-type(2){
+  margin-top: 27rpx;
+}
 .goods_list {
   padding: 0 44rpx 0 30rpx;
 }
